links color chanded, button color changed to green

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,11 +19,15 @@ a {
 }
 
 a:hover {
-    color:#008000;
+    color:#00ff00;
 }
 
-a:visited {
+/*a:visited {
     color:#668000;
+}*/
+
+.btn-default {
+    background-color:#80ff80;
 }
 
 @media(min-width:767px) {
