--- a/css/custom.css
+++ b/css/custom.css
@@ -1,16 +1,16 @@
-ф/*!
+/*!
  * Start Bootstrap - Scrolling Nav (http://startbootstrap.com/)
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
 body {
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
 }
 
 html {
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
 }
 
@@ -152,20 +152,50 @@ body {
   color: #fff;
   text-decoration: none;
 }
+.caption-product{
+  padding-top:30px;
+  display: flex;
+  justify-content: space-between;
+}
+ .caption-product .page-header{
+  font-size: 25px;
+  display: flex;
+  flex-wrap: wrap;
 
-@media(max-width:767px) {
-  .caption-product .page-header {
-    margin-top: 50px;
+ }
+  h1.pull-right{
+    text-align: right;
+    /*flex-basis: 30%;*/
+     font-size: 25px;
+     display: flex;
+     align-items: center;
+  }
+ h1.page-header{
+  flex-basis: 70%;
+  font-size: 25px;
+ } 
+ .page-header small{
+  flex-basis: 100%;
+ }
+@media(min-width:767px){
+  .caption-product{
+  padding-top:0px;
+
+}
+ h1.page-header .page-header,h1.pull-right{
+  font-size: 30px;
+}
+}
+@media(min-width:346px) {
+  .caption-product  {
+   padding-top:0px;
   }
 
   .caption-product .page-header small {
     font-size: 16px;
     display: block;
-    float: left;
+    /*float: left;*/
     padding-top: 5px;
-  }
-  .caption-product .page-header {
-    padding-bottom: 30px;
   }
 
   .img-prod-container {
@@ -232,7 +262,7 @@ footer {
 
 @media(min-width:767px) {
   .caption-product {
-    height: 100px;
+ 
     overflow: hidden;
   }
 }
@@ -241,6 +271,7 @@ footer {
 .caption-product .pull-right {
   padding-bottom: 9px;
   margin: 40px 0 20px;
+  order: 2;
 }
 
 
@@ -294,7 +325,7 @@ footer {
   padding-left: 0;
   border: none;
   border-radius: 0;
-  font-size: 1.5em;
+  /*font-size: 1.5em;*/
   background: none;
   box-shadow: none !important;
   resize: none;
@@ -305,7 +336,7 @@ footer {
   position: relative;
   top: 2em;
   margin: 0;
-  font-size: 0.85em;
+  /*font-size: 0.85em;*/
   line-height: 1.764705882em;
   vertical-align: middle;
   vertical-align: baseline;
@@ -374,4 +405,18 @@ form .row:first-child .floating-label-form-group {
   margin-bottom: 90px;
 }
 
+form.form-inline input.form-control{
+  font-size: 14px;
+  margin: 10px;
+}
 
+form.form-inline{
+  margin: auto;
+  text-align:center;
+}
+@media(min-width: 1000px){
+form.form-inline input.form-control{
+  font-size: 18px;
+  margin: 10px;
+}
+}
