--- a/css/custom.css
+++ b/css/custom.css
@@ -405,9 +405,11 @@ form .row:first-child .floating-label-form-group {
   margin-bottom: 90px;
 }
 
-form.form-inline input.form-control{
-  font-size: 14px;
-  margin: 10px;
+@media (min-width: 768px)  {
+  form.form-inline input.form-control{
+    font-size: 14px;
+    margin: 10px;
+  }
 }
 
 form.form-inline{
