add jqueryvalidation plugin
use old validation only on contact page

--- a/css/custom.css
+++ b/css/custom.css
@@ -43,7 +43,9 @@ a:hover {
     .navbar-brand, .top-nav-collapse {
         padding: 0;
     }
-
+    #mc-embedded-subscribe-form.form-inline .form-group {
+      width: 32%;
+    }
 }
 
 /* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
@@ -241,7 +243,7 @@ body {
    }
    .sticky-caption .caption-button {
      display: none;
-   }
+   } 
 }
 
 @media(min-width:1200px) {
@@ -257,6 +259,9 @@ body {
   .product-info {
     position: sticky;
     top: 163px !important;
+  }
+  #mc-embedded-subscribe-form.form-inline .form-group {
+    width: 25%;
   }
 }
 
@@ -444,6 +449,7 @@ form.form-inline{
   margin: auto;
   text-align:center;
 }
+
 @media(min-width: 1000px){
 form.form-inline input.form-control{
   font-size: 18px;
@@ -509,4 +515,13 @@ img.zoom-img {
 
 .socnetwork {
   font-size: 1.5em;
+}
+
+#mc-embedded-subscribe {
+  vertical-align: top;
+  margin: 10px;
+}
+
+#mc-embedded-subscribe-form.form-inline .form-group {
+  vertical-align: top;
 }
