--- a/css/custom.css
+++ b/css/custom.css
@@ -127,6 +127,9 @@ of those sections to manage the look and feel of the site. */
 /* Header styles*/
 
 @media(max-width:767px) {
+li.socnetwork {
+  display: inline-block; 
+}
 
 body {
     padding-top: 40px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
@@ -542,7 +545,7 @@ img.zoom-img {
   top: 61px;
 }
 
-.socnetwork {
+li.socnetwork {
   font-size: 1.5em;
 }
 
