change colour, add to about

--- a/css/custom.css
+++ b/css/custom.css
@@ -568,5 +568,5 @@ li.socnetwork {
 
 .navbar-default .navbar-nav>.main-active>a, .navbar-default .navbar-nav>.main-active>a:focus, .navbar-default .navbar-nav>.main-active>a:hover {
   color: #333;
-  background-color: #d7e7d7;
+  background-color: #80ff80;
 }
