--- a/css/custom.css
+++ b/css/custom.css
@@ -572,7 +572,7 @@ li.socnetwork {
   background-color: #80ff80;
 }
 
-.img-prod-container.dyi-icon:after {
+.img-prod-container.diy-icon:after {
   position: absolute;
   bottom: 5px;
   width: 30%;
