--- a/css/custom.css
+++ b/css/custom.css
@@ -95,15 +95,18 @@ of those sections to manage the look and feel of the site. */
 
 @media(min-width:767px) {
     body {
-        padding-top: 61px; 
+        padding-top: 50px; 
     }
     nav.navbar {
-        min-height: 61px;
+        min-height: 50px;
     }
     .navbar-fixed-top .navbar-brand {
         padding: 5px 0;
     }
-    .navbar-header {
+    .navbar-toggle {
+        margin-right: -15px;
+    }
+    .navbar-header .navbar-brand {
       padding-right: 70px;
       background:url(../images/lauka_motto.png) right 10px no-repeat;
       -webkit-background-size: 55px;
@@ -224,10 +227,10 @@ body {
   font-size: 25px;
   width:100%;
 }
-.caption-product .labels{
+.caption-product .labels {
   display: inline-block;
 }
-.caption-product .labels i, span {
+.caption-product .labels i, .caption-product .labels span {
   margin-right: 10px;
 }
 .caption-price {
@@ -345,9 +348,6 @@ footer {
   }
 }
 @media (max-width:990px) {
-  body {
-    padding-top: 120px;
-  } 
   .caption-button {
     text-align: right;
   }
@@ -606,4 +606,44 @@ li.socnetwork {
   color: black;
   font-size: 70%;
   margin-right: 5px;
+}
+
+/* Bootstrap menu colapse overide */
+@media (max-width: 1024px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+      margin-right: 0px;
+      margin-left: 0px;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
 }
